0.8.1
Task #48 - Change category to allow multiple category